--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello</h1>
-    <h2>Hey</h2>
-    <h3>new change</h3>
+    <h1>Feature branch change</h1>
+
 </body>
 </html>
